@@ -2,6 +2,7 @@
 [run]
 branch = true
 data_file = c:\ned\coverage\trunk\.coverage
+parallel = true
 
 [report]
 exclude_lines =
